# -FP

./: contato.html  index.html  produtos.html  script.js  servicos.html  style.css
.devcontainer/: devcontainer.json
PUC/: README.md  agendamento.html  contato.html
Porti/todoList/: .coverage  .env  .gitignore  Dockerfile  README.md  compose.yaml  database.db  database.py  entrypoint.sh  gitignore  pyproject.toml
Porti/todoList/.github/workflows/: pipeline.yml
Porti/todoList/migrations/: env.py
Porti/todoList/migrations/versions/: 45c9078f5107_adicionando_created_at_e_updated_at_na_.py  a05595bf302a_exercicio_02_aula_04.py  b370724bf01a_create_todos_table.py  f4f840b7f5e0_criando_a_tabela_de_usuários.py
Porti/todoList/routers/: auth.py  users.py
Porti/todoList/tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
Porti/todoList/todolist/: app.py  database.py  models.py  schemas.py  security.py
Porti/todoList/todolist/routers/: auth.py  todos.py  users.py
front-end/aula_0/: package-lock.json  package.json
front-end/exemplo-api-rest/: package-lock.json
front-end/hello/: package-lock.json
front-end/nikolas_cruz_da_costa-projeto-fase-1/: package.json
front-end/postcard-collection/: package-lock.json  package.json
front-end/serie-jornal/: README.md  package-lock.json  package.json
js/: package-lock.json  package.json
js/scripts/: Areas.js  TryCatch.js  banco.js  banco1.js  baralho.js  baralho1.js  car.js  ciaArea.js  d6vagoes.js  entregavel.js  funcionarios.js  map.js  (+8 more)
projetos/: FastApi.py
(+53 files in other folders)
